# verses

./: .gitignore  README.md  pyproject.toml
verses/: remote.py  runner.py
verses/aws/: base.py  commands.py
verses/aws/ec2/: __ini__.py  ami.py  base.py  base_ami.py  base_instances.py  commands.py  instance.py  instances.py
verses/base/: commands.py  logs.py  process.py  remote.py
verses/mysql/: commands.py
