[tool.poetry]
name = "verses"
version = "0.1.0"
description = "python tools for aws and more"
authors = ["user.name <gmail@hdknr.com>"]
license = "MIT"

[tool.poetry.scripts]
tools = "verses.runner:main"


[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
django-environ = "^0.8.1"
boto3 = "^1.20.38"
fastapi = "^0.75.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
exclude = '''
(
    migrations
    | .mypy_cache
    | .pytest_cache
    | .tox
    | venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 119
multi_line_output = 3

[tool.flake8]
max-line-length = 119
extend-ignore = "E203,W503,W504"
per-file-ignores = "web/costs/reports/__init__.py: F401"
exclude = "migrations"